<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_height="fill_parent"
    android:layout_width="fill_parent">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fadingEdge="none"
        android:padding="6dip"
        android:scrollbarStyle="outsideInset">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">
            <!-- This text may be changed in code if the server is IMAP, etc. -->
            <TextView
                android:id="@+id/account_server_label"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/account_setup_incoming_password_label"
                android:text="@string/account_setup_incoming_pop_server_label"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="?android:attr/textColorPrimary" />

            <EditText
                android:id="@+id/account_server"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="textUri"
                android:singleLine="true" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/account_setup_incoming_security_label"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="?android:attr/textColorPrimary" />

            <Spinner
                android:id="@+id/account_security_type"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/account_setup_incoming_security_label" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/account_setup_incoming_port_label"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="?android:attr/textColorPrimary" />

            <EditText
                android:id="@+id/account_port"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/account_setup_incoming_port_label"
                android:inputType="number"
                android:singleLine="true" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/account_setup_incoming_username_label"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="?android:attr/textColorPrimary" />

            <EditText
                android:id="@+id/account_username"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/account_setup_incoming_username_label"
                android:inputType="textEmailAddress"
                android:singleLine="true" />

            <TextView
                android:id="@+id/account_auth_type_label"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/account_setup_incoming_auth_type_label"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="?android:attr/textColorPrimary" />

            <Spinner
                android:id="@+id/account_auth_type"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/account_setup_incoming_auth_type_label" />

            <TextView
                android:id="@+id/account_password_label"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/account_setup_incoming_password_label"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="?android:attr/textColorPrimary" />

            <EditText
                android:id="@+id/account_password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:singleLine="true" />

            <TextView
                android:id="@+id/account_client_certificate_label"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/account_setup_incoming_client_certificate_label"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="?android:attr/textColorPrimary"
                android:visibility="gone" />

            <com.fsck.k9.view.ClientCertificateSpinner
                android:id="@+id/account_client_certificate_spinner"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:visibility="gone" />

            <LinearLayout
                android:id="@+id/imap_path_prefix_section"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/imap_autodetect_namespace"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/account_setup_incoming_autodetect_namespace_label" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/account_setup_incoming_imap_path_prefix_label"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="?android:attr/textColorPrimary" />

                <EditText
                    android:id="@+id/imap_path_prefix"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/account_setup_incoming_imap_path_prefix_label"
                    android:singleLine="true" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/imap_folder_setup_section"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/subscribed_folders_only"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/account_setup_incoming_subscribed_folders_only_label"
                    />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/webdav_advanced_header"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/advanced"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="?android:attr/textColorPrimary"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/webdav_mailbox_alias_section"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/account_setup_incoming_webdav_mailbox_path_label"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="?android:attr/textColorPrimary" />

                <EditText
                    android:id="@+id/webdav_mailbox_path"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/account_setup_incoming_webdav_mailbox_path_label"
                    android:hint="@string/account_setup_incoming_webdav_mailbox_path_hint"
                    android:singleLine="true" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/webdav_owa_path_section"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/account_setup_incoming_webdav_path_prefix_label"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="?android:attr/textColorPrimary" />

                <EditText
                    android:id="@+id/webdav_path_prefix"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/account_setup_incoming_webdav_path_prefix_label"
                    android:hint="@string/account_setup_incoming_webdav_path_prefix_hint"
                    android:singleLine="true" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/webdav_auth_path_section"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/account_setup_incoming_webdav_auth_path_label"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="?android:attr/textColorPrimary" />

                <EditText
                    android:id="@+id/webdav_auth_path"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/account_setup_incoming_webdav_auth_path_label"
                    android:hint="@string/account_setup_incoming_webdav_auth_path_hint"
                    android:singleLine="true" />
            </LinearLayout>

            <TextView
                android:id="@+id/compression_label"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/account_setup_incoming_compression_label"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="?android:attr/textColorPrimary" />

            <LinearLayout
                android:id="@+id/compression_section"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/compression_mobile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/account_setup_incoming_mobile_label"
                    />

                <CheckBox
                    android:id="@+id/compression_wifi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/account_setup_incoming_compression_label"
                    android:text="@string/account_setup_incoming_wifi_label"
                    />

                <CheckBox
                    android:id="@+id/compression_other"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/account_setup_incoming_compression_label"
                    android:text="@string/account_setup_incoming_other_label"
                    />
            </LinearLayout>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/account_setup_incoming_exchange_version_label"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="?android:attr/textColorPrimary" />

            <Spinner
                android:id="@+id/account_exchange_version"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/account_setup_incoming_exchange_version_label" />

            <LinearLayout
                android:id="@+id/exchange_path_section"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/account_setup_incoming_exchange_path_label"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="?android:attr/textColorPrimary" />

                <EditText
                    android:id="@+id/exchange_path"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/account_setup_incoming_exchange_path_label"
                    android:hint="@string/account_setup_incoming_exchange_path_hint"
                    android:singleLine="true" />
            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="0dip"
                android:layout_weight="1" />
        </LinearLayout>
    </ScrollView>

    <include layout="@layout/wizard_next" />
</LinearLayout>
